update launchers for 2.0