@@ -15,4 +15,5 @@ java \
 -splash:images/SplashScreen.png \
 -Dsun.java2d.uiScale=2.0 \
 -Djogl.disable.openglcore -Djava.util.logging.config.file="$DIR/conf/Logging.properties" -Dsun.java2d.noddraw=true -Dsun.java2d.opengl=false -D-Jsun.java2d.dpiaware=true \
+--add-exports java.base/java.lang=ALL-UNNAMED --add-exports java.desktop/sun.awt=ALL-UNNAMED --add-exports java.desktop/sun.java2d=ALL-UNNAMED \
 net.sf.jaer.JAERViewer "$@"
